fix(validation): look up the DPoP header case-insensitively (M4)
HTTP header names are case-insensitive (RFC 9110), but the DPoP header was resolved
with a case-sensitive map lookup, so a client sending the canonical "DPoP" casing
was silently downgraded to bearer mode — DPoP was not enforced. AccessTokenRequest
now stores headers in a case-insensitive map, and DpopProofValidator resolves the
header case-insensitively (defense-in-depth). Add an M4 test asserting the proof is
honored under DPoP/DPOP/dpop/Dpop.

Co-Authored-By: Claude <noreply@anthropic.com>